--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/chefia
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/chefia}
+spring.datasource.username=${DATABASE_USER:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:admin}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
