--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/chefia}
 spring.datasource.username=${DATABASE_USER:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:admin}
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.auto-commit=false
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
